crates/query-engine/translation/tests/snapshots/tests__aggregate_limit_offset_order_by.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
WITH "%1_Invoice" AS (
  SELECT
    "%0_Invoice".*
  FROM
    "public"."Invoice" AS "%0_Invoice"
  WHERE
    (
      "%0_Invoice"."BillingCountry" = cast($1 as "pg_catalog"."varchar")
    )
  ORDER BY
    "%0_Invoice"."InvoiceId" ASC
  LIMIT
    10 OFFSET 5
)
SELECT
  coalesce(json_agg(row_to_json("%4_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(row_to_json("%6_aggregates"), '[]') AS "aggregates"
        FROM
          (
            SELECT
              min("%3_Invoice"."BillingState") AS "BillingState__min",
              max("%3_Invoice"."BillingState") AS "BillingState__max",
              COUNT(DISTINCT "%3_Invoice"."BillingState") AS "BillingState__count_distinct",
              min("%3_Invoice"."InvoiceId") AS "InvoiceId_min",
              max("%3_Invoice"."InvoiceId") AS "InvoiceId_max",
              COUNT("%3_Invoice"."InvoiceId") AS "InvoiceId_count",
              min("%3_Invoice"."Total") AS "Total__min",
              max("%3_Invoice"."Total") AS "Total__max",
              sum("%3_Invoice"."Total") AS "Total__sum",
              stddev("%3_Invoice"."Total") AS "Total__stddev",
              COUNT(*) AS "count_all"
            FROM
              "%1_Invoice" AS "%3_Invoice"
          ) AS "%6_aggregates"
      ) AS "%6_aggregates"
  ) AS "%4_universe";

{
    1: String(
        "USA",
    ),
}
