crates/query-engine/translation/tests/snapshots/tests__dup_array_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%9_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%10_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%1_RELATIONSHIP_albums"."albums" AS "albums",
              "%2_RELATIONSHIP_Albums"."Albums" AS "Albums"
            FROM
              "public"."Artist" AS "%0_Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%1_RELATIONSHIP_albums") AS "albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("%4_rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%3_Album"."Title" AS "title"
                            FROM
                              "public"."Album" AS "%3_Album"
                            WHERE
                              ("%0_Artist"."ArtistId" = "%3_Album"."ArtistId")
                          ) AS "%4_rows"
                      ) AS "%4_rows"
                  ) AS "%1_RELATIONSHIP_albums"
              ) AS "%1_RELATIONSHIP_albums" ON ('true')
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%2_RELATIONSHIP_Albums") AS "Albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("%7_rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%6_Album"."Title" AS "title"
                            FROM
                              "public"."Album" AS "%6_Album"
                            WHERE
                              ("%0_Artist"."ArtistId" = "%6_Album"."ArtistId")
                          ) AS "%7_rows"
                      ) AS "%7_rows"
                  ) AS "%2_RELATIONSHIP_Albums"
              ) AS "%2_RELATIONSHIP_Albums" ON ('true')
            LIMIT
              5
          ) AS "%10_rows"
      ) AS "%10_rows"
  ) AS "%9_universe";

{}
