crates/query-engine/translation/tests/snapshots/tests__it_aggregate_count_albums.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%1_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%2_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Album"."Title" AS "Title"
            FROM
              "public"."Album" AS "%0_Album"
            LIMIT
              5 OFFSET 3
          ) AS "%2_rows"
      ) AS "%2_rows"
      CROSS JOIN (
        SELECT
          coalesce(row_to_json("%3_aggregates"), '[]') AS "aggregates"
        FROM
          (
            SELECT
              COUNT(*) AS "how_many_albums"
            FROM
              "public"."Album" AS "%0_Album"
          ) AS "%3_aggregates"
      ) AS "%3_aggregates"
  ) AS "%1_universe";

{}
