crates/query-engine/translation/tests/snapshots/tests__it_select_where_not_null.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%1_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%2_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Album"."Title" AS "Title"
            FROM
              "public"."Album" AS "%0_Album"
            WHERE
              NOT ("%0_Album"."AlbumId" IS NULL)
            LIMIT
              5 OFFSET 100
          ) AS "%2_rows"
      ) AS "%2_rows"
  ) AS "%1_universe";

{}
