crates/query-engine/translation/tests/snapshots/tests__it_select_where_string.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%1_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%2_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Album"."AlbumId" AS "AlbumId"
            FROM
              "public"."Album" AS "%0_Album"
            WHERE
              (
                "%0_Album"."Title" IN (cast($1 as varchar), cast($2 as varchar))
              )
          ) AS "%2_rows"
      ) AS "%2_rows"
  ) AS "%1_universe";

{
    1: String(
        "Mozart: Chamber Music",
    ),
    2: String(
        "Something else",
    ),
}
