crates/query-engine/translation/tests/snapshots/tests__it_select_where_unrelated_exists.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%2_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_album"."Title" AS "title"
            FROM
              "public"."Album" AS "%0_album"
            WHERE
              EXISTS (
                SELECT
                  1 AS "one"
                FROM
                  "public"."Artist" AS "%1_artist"
                WHERE
                  (
                    ("%1_artist"."Name" = cast($1 as varchar))
                    AND ("%0_album"."ArtistId" = "%1_artist"."ArtistId")
                  )
              )
          ) AS "%3_rows"
      ) AS "%3_rows"
  ) AS "%2_universe";

{
    1: String(
        "Gilberto Gil",
    ),
}
